# projects-42

A_maze_ing/: Makefile  README.md  a_maze_ing.py  maze.txt  mazegen-0.1.0-py3-none-any.whl  mypy.ini  pyproject.toml
A_maze_ing/mazegen/: .gitignore  display.py  emoji_maker.py  key_reader.py  maze_generator.py  pyproject.toml  solver.py
A_maze_ing/mazegen/configuration/: __init__.py  config.txt  parser.py
get_next_line/: a.out  fichier.text  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  main.c
libft/: Makefile  a.out  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putmem.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  (+8 more)
piscine_python/P08/ex1/: loading.py  pyproject.toml  requirements.txt
printf/: a.out  ft_calloc.c  ft_itoa_base.c  ft_printf.c  ft_putchar_fd.c  ft_putmem.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strlen.c  main.c
push_swap/: Makefile  README.md  a.out  algorithm_utils.c  chunk_sort.c  ft_printf.h  insertion_sort.c  libft.h  main.c  makefile  ops_utils.c  parsing_utils.c  (+12 more)
(+149 files in other folders)
