[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.1",
    "pydantic-settings>=2.0.0",
    "wcwidth>=0.2.0",
    "colorama>=0.4.6",
    "tqdm>=4.0.0"
]

[dependency-groups]
dev = [
    "build>=1.5.0",
    "flake8>=7.3.0",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "wheel>=0.43"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]
